2003-09-09  JMB  View selector in row viewer, desktop recent files menu

    The row viewer now has a droplist from which any of the defined views
    can be chosen; the selection of displayed fields is then updated to match
    that view.

    The "recently opened files" list which is tracked starting in version 1.8
    for the benefit of the file browser on the new sharp ROMs is now also
    available as an "Open Recent" submenu under the "File" menu in the
    desktop versions of PortaBase.

2003-09-08  JMB  Text copy from row viewer, time difference calculations

    There is now a copy button in the row viewer which allows you to copy
    the selected text (if any) to the clipboard.

    Also added three new operators for calculated fields: "Seconds_Between",
    "Minutes_Between", and "Hours_Between".  Each returns the difference
    between two time columns, measured using the appropriate unit.  Fixed
    some minor bugs in the calculation editor in the process (the equation
    display and button status sometimes weren't updated correctly).

2003-09-05  JMB  Toolbar button preferences

    Similar to the menu preferences, there is a new tab in the preferences
    dialog which allows selection and ordering of the buttons to be shown
    in the toolbar.  Current options are Save, Add, Edit, Copy, Delete, and
    Quick Filter.

2003-09-04  JMB  Menu layout preferences

    You can now choose which among the Row, View, Sort, and Filter menus
    you want to appear as top-level menus and which you want to put as
    submenus under the File menu instead.  You can also choose the order
    in which to arrange these menus.  There is a new tab in the preferences
    dialog for configuring this.

2003-09-03  JMB  Added non-paged display option

    Added a new checkbox in the preferences dialog which allows you to turn
    off paging in the data viewer, so all rows in the current filter are
    displayed on one page and the row of navigation buttons is hidden.
