@@ -62,7 +62,8 @@ HEADERS         = portabase.h \
                   calc/calcwidget.h \
                   sharp/fileselector.h \
                   pbdialog.h \
-                  calc/calctimeeditor.h
+                  calc/calctimeeditor.h \
+                  menuactions.h
 SOURCES         = main.cpp \
                   portabase.cpp \
                   inputdialog.cpp \
@@ -113,4 +114,5 @@ SOURCES         = main.cpp \
                   calc/calcwidget.cpp \
                   sharp/fileselector.cpp \
                   pbdialog.cpp \
-                  calc/calctimeeditor.cpp
+                  calc/calctimeeditor.cpp \
+                  menuactions.cpp
