@@ -1,3 +1,12 @@
+2003-09-10  JMB  Menu shortcuts and accelerators in desktop versions
+
+    Added shortcuts (underlined letters which activate the item when that
+    key is pressed on the keyboard) and accelerators (like "Ctrl-N") for
+    menu items where appropriate in the desktop versions.  The Zaurus
+    versions work as before, since the underlining and accelerator labels
+    take up space and it is unusual to work primarily from the keyboard on a
+    PDA (even on the C7x0 models).
+
 2003-09-09  JMB  View selector in row viewer, desktop recent files menu
 
     The row viewer now has a droplist from which any of the defined views
